--- a/package.json
+++ b/package.json
@@ -18,19 +18,37 @@
   },
   "homepage": "https://github.com/LemmiwinksNO/process#readme",
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
     "body-parser": "~1.15.0",
+    "compression": "^1.6.2",
     "express": "~4.13.4",
-    "jquery": "^2.2.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^2.2.4",
     "lodash": "^4.12.0",
-    "mongoose": "~4.4.12"
+    "mongoose": "~4.4.12",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.8",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "json-loader": "^0.5.4",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
